Reference images/tools: fixed alignment and width of reference tools and icons

--- a/src/components/ReferenceTools/ReferenceTools.scss
+++ b/src/components/ReferenceTools/ReferenceTools.scss
@@ -1,3 +1,9 @@
+.reference-tool {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
 .reference-tool-icon {
     height: 20px;
     margin-left: 10px;
