--- a/src/components/References/References.scss
+++ b/src/components/References/References.scss
@@ -9,3 +9,9 @@
 .reference-wrap {
     margin-bottom: 40px;
 }
+
+.reference-image {
+  img {
+    max-width: 100%;
+  }
+}
